k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: self-healing-app
  namespace: devops-platform

spec:
  replicas: 1

  selector:
    matchLabels:
      app: self-healing-app

  template:
    metadata:
      labels:
        app: self-healing-app

    spec:
      containers:
      - name: self-healing-app

        image: self-healing-app:v1

        imagePullPolicy: Never

        ports:
        - containerPort: 5000

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"

          limits:
            cpu: "200m"
            memory: "256Mi"
