k8s/notification-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: notification-service
  namespace: devops-platform

spec:
  replicas: 1

  selector:
    matchLabels:
      app: notification-service

  template:
    metadata:
      labels:
        app: notification-service

    spec:
      containers:
      - name: notification-service

        image: sne16/notification:latest

        imagePullPolicy: Always

        ports:
        - containerPort: 5000
