k8s/notification-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: notification-service
  namespace: devops-platform

spec:
  selector:
    app: notification-service

  ports:
    - port: 80
      targetPort: 5000

  type: ClusterIP
