k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: self-healing-app-service
  namespace: devops-platform

spec:
  selector:
    app: self-healing-app

  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000

  type: NodePort
